--- a/2_arima.ipynb
+++ b/2_arima.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = train_test_split(data['LMCADY_acu_5d'], test_size=0.2, shuffle=False)"
+    "train_data, test_data = train_test_split(data['LMCADY_acu_5d'], test_size=0.15, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -103,36 +103,36 @@
      "text": [
       "                               SARIMAX Results                                \n",
       "==============================================================================\n",
-      "Dep. Variable:          LMCADY_acu_5d   No. Observations:                 4431\n",
-      "Model:                 ARIMA(1, 0, 1)   Log Likelihood               10761.038\n",
-      "Date:                Mon, 15 Apr 2024   AIC                         -21514.076\n",
-      "Time:                        21:52:51   BIC                         -21488.491\n",
-      "Sample:                             0   HQIC                        -21505.054\n",
-      "                               - 4431                                         \n",
+      "Dep. Variable:          LMCADY_acu_5d   No. Observations:                 4708\n",
+      "Model:                 ARIMA(1, 0, 1)   Log Likelihood               11237.533\n",
+      "Date:                Fri, 19 Apr 2024   AIC                         -22467.067\n",
+      "Time:                        20:44:59   BIC                         -22441.239\n",
+      "Sample:                             0   HQIC                        -22457.987\n",
+      "                               - 4708                                         \n",
       "Covariance Type:                  opg                                         \n",
       "==============================================================================\n",
       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const          0.0004      0.001      0.303      0.762      -0.002       0.003\n",
-      "ar.L1          0.7655      0.008     96.642      0.000       0.750       0.781\n",
-      "ma.L1          0.0333      0.012      2.797      0.005       0.010       0.057\n",
-      "sigma2         0.0005   5.39e-06     84.348      0.000       0.000       0.000\n",
+      "const       9.319e-05      0.001      0.064      0.949      -0.003       0.003\n",
+      "ar.L1          0.7638      0.008     94.802      0.000       0.748       0.780\n",
+      "ma.L1          0.0378      0.012      3.137      0.002       0.014       0.061\n",
+      "sigma2         0.0005   5.81e-06     85.036      0.000       0.000       0.001\n",
       "===================================================================================\n",
-      "Ljung-Box (L1) (Q):                   0.00   Jarque-Bera (JB):              4310.88\n",
+      "Ljung-Box (L1) (Q):                   0.00   Jarque-Bera (JB):              4043.70\n",
       "Prob(Q):                              0.96   Prob(JB):                         0.00\n",
-      "Heteroskedasticity (H):               2.65   Skew:                             0.43\n",
-      "Prob(H) (two-sided):                  0.00   Kurtosis:                         7.75\n",
+      "Heteroskedasticity (H):               3.10   Skew:                             0.39\n",
+      "Prob(H) (two-sided):                  0.00   Kurtosis:                         7.47\n",
       "===================================================================================\n",
       "\n",
       "Warnings:\n",
       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
-      "RMSE: 0.037679813394897586\n"
+      "RMSE: 0.03073\n"
      ]
     }
    ],
    "source": [
     "print(fitted_model.summary())\n",
-    "print(\"RMSE:\", rmse)"
+    "print(\"RMSE: {:.4}\".format(rmse))"
    ]
   }
  ],
