--- a/3_sarima.ipynb
+++ b/3_sarima.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_662113/1628820390.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
@@ -30,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit_evaluate_sarima(series, order, seasonal_order):\n",
     "    # Dividir en conjuntos de entrenamiento y prueba\n",
-    "    train, test = train_test_split(series, test_size=0.2, shuffle=False)\n",
+    "    train, test = train_test_split(series, test_size=0.15, shuffle=False)\n",
     "\n",
     "    # Ajustar el modelo SARIMA\n",
     "    model = SARIMAX(train, order=order, seasonal_order=seasonal_order, enforce_stationarity=False, enforce_invertibility=False)\n",
@@ -65,24 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n",
-      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
+      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n",
-      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n",
-      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
+      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n",
-      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
       "  return get_prediction_index(\n",
-      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
       "  return get_prediction_index(\n"
      ]
     }
@@ -93,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -102,36 +87,36 @@
      "text": [
       "                                     SARIMAX Results                                      \n",
       "==========================================================================================\n",
-      "Dep. Variable:                      LMCADY_acu_5d   No. Observations:                 4431\n",
-      "Model:             SARIMAX(1, 0, 1)x(0, 1, 1, 12)   Log Likelihood               10661.369\n",
-      "Date:                            Tue, 16 Apr 2024   AIC                         -21314.738\n",
-      "Time:                                    17:59:55   BIC                         -21289.176\n",
-      "Sample:                                         0   HQIC                        -21305.722\n",
-      "                                           - 4431                                         \n",
+      "Dep. Variable:                      LMCADY_acu_5d   No. Observations:                 4708\n",
+      "Model:             SARIMAX(1, 0, 1)x(0, 1, 1, 12)   Log Likelihood               11140.496\n",
+      "Date:                            Fri, 19 Apr 2024   AIC                         -22272.992\n",
+      "Time:                                    20:49:16   BIC                         -22247.186\n",
+      "Sample:                                         0   HQIC                        -22263.917\n",
+      "                                           - 4708                                         \n",
       "Covariance Type:                              opg                                         \n",
       "==============================================================================\n",
       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "ar.L1          0.7670      0.008     97.047      0.000       0.751       0.782\n",
-      "ma.L1          0.0299      0.012      2.487      0.013       0.006       0.053\n",
-      "ma.S.L12      -1.0002      0.061    -16.526      0.000      -1.119      -0.882\n",
-      "sigma2         0.0005   2.92e-05     15.620      0.000       0.000       0.001\n",
+      "ar.L1          0.7655      0.008     95.012      0.000       0.750       0.781\n",
+      "ma.L1          0.0343      0.012      2.820      0.005       0.010       0.058\n",
+      "ma.S.L12      -1.0042      0.003   -333.868      0.000      -1.010      -0.998\n",
+      "sigma2         0.0005   6.34e-06     77.690      0.000       0.000       0.001\n",
       "===================================================================================\n",
-      "Ljung-Box (L1) (Q):                   0.04   Jarque-Bera (JB):              4179.74\n",
+      "Ljung-Box (L1) (Q):                   0.04   Jarque-Bera (JB):              3907.92\n",
       "Prob(Q):                              0.85   Prob(JB):                         0.00\n",
-      "Heteroskedasticity (H):               2.65   Skew:                             0.42\n",
-      "Prob(H) (two-sided):                  0.00   Kurtosis:                         7.70\n",
+      "Heteroskedasticity (H):               3.10   Skew:                             0.38\n",
+      "Prob(H) (two-sided):                  0.00   Kurtosis:                         7.41\n",
       "===================================================================================\n",
       "\n",
       "Warnings:\n",
       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
-      "RMSE: 0.0377099725003074\n"
+      "RMSE: 0.03088\n"
      ]
     }
    ],
    "source": [
     "print(summary)\n",
-    "print(\"RMSE:\", rmse)"
+    "print(\"RMSE: {:.4}\".format(rmse))"
    ]
   }
  ],
@@ -151,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
