modificacion de modelo base guardada

--- a/1_ar.ipynb
+++ b/1_ar.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_97709/4081799432.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from statsmodels.tsa.ar_model import AutoReg\n",
@@ -15,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +257,7 @@
        "[5539 rows x 11 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,14 +267,12 @@
     "df_10 = pd.read_csv('./in/copper_returns_10d_final.csv')\n",
     "df_20 = pd.read_csv('./in/copper_returns_20d_final.csv')\n",
     "\n",
-    "df_5\n",
-    "# print(df_10)\n",
-    "# print(df_20)"
+    "df_5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +512,7 @@
        "[5538 rows x 10 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,16 +537,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2024-03-25   -0.001191\n",
+       "2024-03-22    0.008130\n",
+       "2024-03-21    0.008524\n",
+       "2024-03-20    0.013951\n",
+       "2024-03-19    0.025901\n",
+       "                ...   \n",
+       "2006-03-16   -0.030346\n",
+       "2006-03-15   -0.037684\n",
+       "2006-03-14   -0.043986\n",
+       "2006-03-13   -0.060290\n",
+       "2006-03-10   -0.021713\n",
+       "Name: LMCADY_acu_5d, Length: 4707, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2006-03-09   -0.046028\n",
+       "2006-03-08   -0.030291\n",
+       "2006-03-07   -0.001464\n",
+       "2006-03-06    0.029005\n",
+       "2006-03-03    0.034034\n",
+       "                ...   \n",
+       "2003-01-08   -0.026799\n",
+       "2003-01-07   -0.011388\n",
+       "2003-01-06   -0.015156\n",
+       "2003-01-03   -0.040276\n",
+       "2003-01-02   -0.048471\n",
+       "Name: LMCADY_acu_5d, Length: 831, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n",
-      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
+      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n"
      ]
     }
@@ -545,18 +622,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
       "  return get_prediction_index(\n",
-      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
       "  return get_prediction_index(\n",
-      "c:\\Users\\gapuj\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsmodels\\tsa\\deterministic.py:307: UserWarning: Only PeriodIndexes, DatetimeIndexes with a frequency set, RangesIndexes, and Index with a unit increment support extending. The index is set will contain the position relative to the data length.\n",
+      "/home/fochoa/.local/lib/python3.10/site-packages/statsmodels/tsa/deterministic.py:307: UserWarning: Only PeriodIndexes, DatetimeIndexes with a frequency set, RangesIndexes, and Index with a unit increment support extending. The index is set will contain the position relative to the data length.\n",
       "  fcast_index = self._extend_index(index, steps, forecast_index)\n"
      ]
     }
@@ -567,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -589,8 +666,8 @@
       "Dep. Variable:          LMCADY_acu_5d   No. Observations:                 4707\n",
       "Model:                     AutoReg(1)   Log Likelihood               11230.071\n",
       "Method:               Conditional MLE   S.D. of innovations              0.022\n",
-      "Date:                Fri, 19 Apr 2024   AIC                         -22454.143\n",
-      "Time:                        20:30:48   BIC                         -22434.773\n",
+      "Date:                Wed, 01 May 2024   AIC                         -22454.143\n",
+      "Time:                        16:18:25   BIC                         -22434.773\n",
       "Sample:                             1   HQIC                        -22447.333\n",
       "                                 4707                                         \n",
       "====================================================================================\n",
@@ -630,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
