--- a/3_sarima.ipynb
+++ b/3_sarima.ipynb
@@ -7,10 +7,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
