--- a/1_ar_v_1.ipynb
+++ b/1_ar_v_1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 15,
       "metadata": {
         "id": "0_ksTW-N0hSs"
       },
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -26,254 +26,6 @@
         },
         "id": "cuTy9Wzb0CmX",
         "outputId": "380af154-65eb-48fb-b6c0-e3979dc48f92"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Date</th>\n",
-              "      <th>LMCADS03</th>\n",
-              "      <th>LMCADY</th>\n",
-              "      <th>DXY</th>\n",
-              "      <th>SPX</th>\n",
-              "      <th>BCOM</th>\n",
-              "      <th>MXWD</th>\n",
-              "      <th>XAU</th>\n",
-              "      <th>XAG</th>\n",
-              "      <th>LMCADY_acu_20d_log</th>\n",
-              "      <th>LMCADY_std_20d_log</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2003-01-02</td>\n",
-              "      <td>0.019048</td>\n",
-              "      <td>0.019834</td>\n",
-              "      <td>0.010739</td>\n",
-              "      <td>0.032661</td>\n",
-              "      <td>0.025337</td>\n",
-              "      <td>0.023209</td>\n",
-              "      <td>-0.005763</td>\n",
-              "      <td>0.007918</td>\n",
-              "      <td>0.081352</td>\n",
-              "      <td>0.009287</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2003-01-03</td>\n",
-              "      <td>0.013121</td>\n",
-              "      <td>0.013478</td>\n",
-              "      <td>-0.004965</td>\n",
-              "      <td>-0.000484</td>\n",
-              "      <td>0.014288</td>\n",
-              "      <td>0.003782</td>\n",
-              "      <td>0.014915</td>\n",
-              "      <td>0.014833</td>\n",
-              "      <td>0.075898</td>\n",
-              "      <td>0.009074</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2003-01-06</td>\n",
-              "      <td>0.010804</td>\n",
-              "      <td>0.010262</td>\n",
-              "      <td>-0.004891</td>\n",
-              "      <td>0.022226</td>\n",
-              "      <td>-0.016118</td>\n",
-              "      <td>0.018549</td>\n",
-              "      <td>0.000000</td>\n",
-              "      <td>0.001533</td>\n",
-              "      <td>0.068538</td>\n",
-              "      <td>0.008946</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2003-01-07</td>\n",
-              "      <td>-0.004616</td>\n",
-              "      <td>-0.004479</td>\n",
-              "      <td>0.005867</td>\n",
-              "      <td>-0.006566</td>\n",
-              "      <td>-0.002697</td>\n",
-              "      <td>-0.008853</td>\n",
-              "      <td>-0.011453</td>\n",
-              "      <td>-0.020109</td>\n",
-              "      <td>0.055772</td>\n",
-              "      <td>0.009940</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2003-01-08</td>\n",
-              "      <td>0.009822</td>\n",
-              "      <td>0.009771</td>\n",
-              "      <td>-0.006848</td>\n",
-              "      <td>-0.014186</td>\n",
-              "      <td>0.004093</td>\n",
-              "      <td>-0.014657</td>\n",
-              "      <td>0.018206</td>\n",
-              "      <td>0.010363</td>\n",
-              "      <td>0.046443</td>\n",
-              "      <td>0.009813</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5530</th>\n",
-              "      <td>2024-03-18</td>\n",
-              "      <td>0.001872</td>\n",
-              "      <td>0.001962</td>\n",
-              "      <td>0.001449</td>\n",
-              "      <td>0.006298</td>\n",
-              "      <td>0.004918</td>\n",
-              "      <td>0.005016</td>\n",
-              "      <td>0.002067</td>\n",
-              "      <td>-0.005957</td>\n",
-              "      <td>0.055556</td>\n",
-              "      <td>0.009941</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5531</th>\n",
-              "      <td>2024-03-19</td>\n",
-              "      <td>-0.012455</td>\n",
-              "      <td>-0.012914</td>\n",
-              "      <td>0.002314</td>\n",
-              "      <td>0.005633</td>\n",
-              "      <td>-0.000881</td>\n",
-              "      <td>0.002382</td>\n",
-              "      <td>-0.001283</td>\n",
-              "      <td>-0.004905</td>\n",
-              "      <td>0.053156</td>\n",
-              "      <td>0.010152</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5532</th>\n",
-              "      <td>2024-03-20</td>\n",
-              "      <td>-0.005418</td>\n",
-              "      <td>-0.005876</td>\n",
-              "      <td>-0.004150</td>\n",
-              "      <td>0.008865</td>\n",
-              "      <td>-0.003435</td>\n",
-              "      <td>0.006111</td>\n",
-              "      <td>0.013260</td>\n",
-              "      <td>0.026443</td>\n",
-              "      <td>0.073317</td>\n",
-              "      <td>0.010261</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5533</th>\n",
-              "      <td>2024-03-21</td>\n",
-              "      <td>0.002517</td>\n",
-              "      <td>0.002132</td>\n",
-              "      <td>0.005979</td>\n",
-              "      <td>0.003231</td>\n",
-              "      <td>0.001955</td>\n",
-              "      <td>0.006763</td>\n",
-              "      <td>-0.002317</td>\n",
-              "      <td>-0.033334</td>\n",
-              "      <td>0.088143</td>\n",
-              "      <td>0.010671</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5534</th>\n",
-              "      <td>2024-03-22</td>\n",
-              "      <td>-0.009429</td>\n",
-              "      <td>-0.009278</td>\n",
-              "      <td>0.004030</td>\n",
-              "      <td>-0.001403</td>\n",
-              "      <td>-0.007463</td>\n",
-              "      <td>-0.002582</td>\n",
-              "      <td>-0.007311</td>\n",
-              "      <td>-0.002849</td>\n",
-              "      <td>0.112357</td>\n",
-              "      <td>0.010407</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>5535 rows × 11 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "            Date  LMCADS03    LMCADY       DXY       SPX      BCOM      MXWD  \\\n",
-              "0     2003-01-02  0.019048  0.019834  0.010739  0.032661  0.025337  0.023209   \n",
-              "1     2003-01-03  0.013121  0.013478 -0.004965 -0.000484  0.014288  0.003782   \n",
-              "2     2003-01-06  0.010804  0.010262 -0.004891  0.022226 -0.016118  0.018549   \n",
-              "3     2003-01-07 -0.004616 -0.004479  0.005867 -0.006566 -0.002697 -0.008853   \n",
-              "4     2003-01-08  0.009822  0.009771 -0.006848 -0.014186  0.004093 -0.014657   \n",
-              "...          ...       ...       ...       ...       ...       ...       ...   \n",
-              "5530  2024-03-18  0.001872  0.001962  0.001449  0.006298  0.004918  0.005016   \n",
-              "5531  2024-03-19 -0.012455 -0.012914  0.002314  0.005633 -0.000881  0.002382   \n",
-              "5532  2024-03-20 -0.005418 -0.005876 -0.004150  0.008865 -0.003435  0.006111   \n",
-              "5533  2024-03-21  0.002517  0.002132  0.005979  0.003231  0.001955  0.006763   \n",
-              "5534  2024-03-22 -0.009429 -0.009278  0.004030 -0.001403 -0.007463 -0.002582   \n",
-              "\n",
-              "           XAU       XAG  LMCADY_acu_20d_log  LMCADY_std_20d_log  \n",
-              "0    -0.005763  0.007918            0.081352            0.009287  \n",
-              "1     0.014915  0.014833            0.075898            0.009074  \n",
-              "2     0.000000  0.001533            0.068538            0.008946  \n",
-              "3    -0.011453 -0.020109            0.055772            0.009940  \n",
-              "4     0.018206  0.010363            0.046443            0.009813  \n",
-              "...        ...       ...                 ...                 ...  \n",
-              "5530  0.002067 -0.005957            0.055556            0.009941  \n",
-              "5531 -0.001283 -0.004905            0.053156            0.010152  \n",
-              "5532  0.013260  0.026443            0.073317            0.010261  \n",
-              "5533 -0.002317 -0.033334            0.088143            0.010671  \n",
-              "5534 -0.007311 -0.002849            0.112357            0.010407  \n",
-              "\n",
-              "[5535 rows x 11 columns]"
-            ]
-          },
-          "execution_count": 117,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "window = 20\n",
-        "\n",
-        "file_path = './in/copper_log_returns_{}d_final.csv'.format(window)\n",
-        "df = pd.read_csv(file_path)\n",
-        "df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 118,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "U9srny_b1sut",
-        "outputId": "aa50ef92-b534-4b3a-e265-5f0aadb44548"
       },
       "outputs": [
         {
@@ -293,16 +45,28 @@
               "Name: LMCADY_acu_20d_log, Length: 5535, dtype: float64"
             ]
           },
-          "execution_count": 118,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
-      "source": []
+      "source": [
+        "window = 20\n",
+        "\n",
+        "file_path = './in/copper_log_returns_{}d_final.csv'.format(window)\n",
+        "df = pd.read_csv(file_path, parse_dates=True)\n",
+        "\n",
+        "df = df.sort_values(by='Date')\n",
+        "\n",
+        "targ = 'LMCADY_acu_{}d_log'.format(window)\n",
+        "time_series = df[targ]\n",
+        "\n",
+        "time_series"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 17,
       "metadata": {
         "id": "XL4VYrdo2Ry7"
       },
@@ -313,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -339,7 +103,7 @@
               "Name: LMCADY_acu_20d_log, Length: 5479, dtype: float64"
             ]
           },
-          "execution_count": 120,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -350,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 19,
       "metadata": {
         "id": "XUKGB2nM3arG"
       },
@@ -385,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 20,
       "metadata": {
         "id": "5DPSnKg4P6pR"
       },
@@ -404,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -418,7 +182,13 @@
           "output_type": "stream",
           "text": [
             "AR> RMSE para 0 lags: 0.043611\n",
-            "AR> RMSE para 1 lags: 0.013478\n",
+            "AR> RMSE para 1 lags: 0.013478\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "AR> RMSE para 2 lags: 0.013486\n",
             "AR> RMSE para 3 lags: 0.013479\n",
             "AR> RMSE para 4 lags: 0.013475\n",
@@ -541,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -565,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 23,
       "metadata": {
         "id": "RFbDNpkV361l"
       },
@@ -584,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
